# snatch

./: .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CLAUDE.md  CLOUDFLARE.md  CLOUDFLARE_DEPLOYMENT.md  CLOUDFLARE_PAGES_DEPLOYMENT.json  DEPLOY.md  DOWNLOAD_STATUS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INSTAGRAM_CODE_REVIEW.md  MERGE_RESOLUTION.md  README.md  README_CLOUDFLARE_PAGES.md  README_VERCEL.md  _redirects  astro.config.mjs  biome.json  bunfig.toml  deploy.sh  docker-compose.yml  lefthook.yml  nginx.conf.example  package.json  pnpm-lock.yaml  test-crawlee.ts  test-instagram-graphql.ts  todos.json  vercel.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  deploy-cloudflare-pages.yml
.husky/: pre-commit
api/: download.ts  types.ts
api/types/: download.ts
apps/api/: Dockerfile  package.json  tsconfig.json
apps/web/: astro.config.mjs  package.json
docs/: API.md  CLOUDFLARE_DEPLOYMENT.md  README.md
downloader-api/: Cargo.toml  Dockerfile
downloader-api/src/: extractor.rs  handlers.rs  main.rs
functions/api/: download.ts
public/: sitemap.xml
snatch-rs/: Cargo.toml  Dockerfile
snatch-rs/src/: cache.rs  extractor.rs  handlers.rs  main.rs  models.rs  retry.rs
src/: routeTree.gen.ts
src/adapters/: adapter-registry.ts  vercel-adapter.ts
src/components/: AppNavbar.tsx  DownloadForm.tsx  DownloadResult.tsx  DownloaderApp.tsx  DownloaderInput.tsx  ErrorBoundary.tsx  FeaturesSection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  LazyComponents.tsx  (+4 more)
static/: robots.txt
(+84 files in other folders)
