[package]
name = "snatch-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full", "process"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "limit", "timeout"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"

[dev-dependencies]
hyper = "1.0"
tokio-test = "0.4"
tower = "0.5"
